fix wrapping issue on proposal status wrt to title

--- a/packages/nouns-webapp/src/components/ProposalHeader/ProposalHeader.module.css
+++ b/packages/nouns-webapp/src/components/ProposalHeader/ProposalHeader.module.css
@@ -75,3 +75,11 @@
 .submitBtnDisabled:hover {
   cursor: not-allowed;
 }
+
+.proposalTitleWrapper {
+  display: flex;
+}
+
+.proposalTitle {
+  margin-right: 0.5rem;
+}
